syntax = "proto3";

service Enterprise {
    rpc GetProductWithStockItem (Barcode) returns (ProductWithStockItem) {}
}
message Barcode {
    int32 code = 1;
}
message ProductWithStockItem {
    string message = 1;
    int32 id =2;
}